Auth was working - DI is all broken now

--- a/Views/Templates/LoginRegister.html
+++ b/Views/Templates/LoginRegister.html
@@ -1,4 +1,4 @@
-﻿<div class="loginRegisterModal" ng-controller="authController">
+﻿<div class="loginRegisterModal">
     <div id="tabs" class="modal-header">
         <ul class="nav nav-tabs">
             <li role="presentation" data-ng-repeat="tab in ::loginModalCtrl.tabs" data-ng-class="{active:loginModalCtrl.isActiveTab(tab.url)}"
