--- a/Views/Templates/Transaction.html
+++ b/Views/Templates/Transaction.html
@@ -1,22 +1,21 @@
 <div>
     <!-- COMPACT TRANSACTION VIEW-->
-    <div class="transactioncompact" ng-class="{'activetransaction': transCtrl.trans.expanded}">
+    <div class="transactioncompact" ng-class="{'activetransaction': transCtrl.expanded}">
         <div class="row">
             <div class="col-sm-5">
                 <p>{{::transCtrl.trans.Name}}</p>
             </div>
             <div class="col-sm-2">
-                <i ng-click="transCtrl.expandTransaction()" tooltip="Click to expand" tooltip-placement="left" ng-class="trans.expanded ? 'glyphicon glyphicon-menu-up' : 'glyphicon glyphicon-menu-down'"></i>
+                <i ng-click="transCtrl.expand()" tooltip="Click to expand" tooltip-placement="left" ng-class="transCtrl.expanded ? 'glyphicon glyphicon-menu-up' : 'glyphicon glyphicon-menu-down'"></i>
             </div>
         </div>
         <div class="progress">
-            <div class="progress-bar" ng-class="transCtrl.barclass()" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"
-            style="width: 20%"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
         </div>
     </div>
     <!--EXPANDED TRANSACTION VIEW-->
     <div class="transactionexpanded" ng-if="transCtrl.trans.expanded" style="padding:2px">
-        <span ng-class="transCtrl.labelclass()">{{::trans.TypeDescription}}</span>
+        <span class="label">{{::TransCtrl.trans.TypeDescription}}</span>
         <ul class="list-group transactionvalues">
             <!--TRANSACTION VALUES-->
             <li class="transactionValueheader list-group-item clearfix">
