--- a/Views/Templates/transactionList.html
+++ b/Views/Templates/transactionList.html
@@ -2,9 +2,11 @@
 	<li class="list-group-item transactionstitle sectionheader clearfix">
 		<div class="sectiontitle">
 			<span>Recurring transactions</span>
-			<i style="float:right;" class="fa fa-plus fa-2x hvr-pop" ng-show="!tListCtrl.listmgr.addMode && !tListCtrl.transactionhasfocus" ng-click="tListCtrl.expandAddTransaction()"></i>
+			<i style="float:right;" class="fa fa-plus fa-2x hvr-pop" ng-show="!tListCtrl.listState.addMode"
+			ng-click="tListCtrl.expandAddForm()"></i>
 		</div>
-		<form transaction-editor ng-if="tListCtrl.listmgr.addMode" listmgr="tListCtrl.listmgr"</form>
+		<form transaction-editor ng-if="tListCtrl.listmgr.addMode" listmgr="tListCtrl.listmgr" </form>
 	</li>
-	<transaction ng-if="tListCtrl.visible($index)" class="transaction list-group-item clearfix" listmgr="tListCtrl.listmgr" index="$index" trans="trans" delete="tListCtrl.deleteTrans" ng-repeat="trans in tListCtrl.transactions"></transaction>
+	<transaction ng-if="tListCtrl.isVisible($index)" class="transaction list-group-item clearfix" listmgr="tListCtrl.listmgr"
+	index="$index" trans="trans" delete="tListCtrl.deleteTrans" ng-repeat="trans in tListCtrl.transactions"></transaction>
 </ul>
