Transaction List Working

--- a/Views/Templates/Transaction.html
+++ b/Views/Templates/Transaction.html
@@ -14,8 +14,8 @@
         </div>
     </div>
     <!--EXPANDED TRANSACTION VIEW-->
-    <div class="transactionexpanded" ng-if="transCtrl.trans.expanded" style="padding:2px">
-        <span class="label">{{::TransCtrl.trans.TypeDescription}}</span>
+    <div class="transactionexpanded" ng-if="transCtrl.expanded" style="padding:2px">
+        <span class="label">{{::transCtrl.trans.TypeDescription}}</span>
         <ul class="list-group transactionvalues">
             <!--TRANSACTION VALUES-->
             <li class="transactionValueheader list-group-item clearfix">
