--- a/Views/Templates/TransactionValueList.html
+++ b/Views/Templates/TransactionValueList.html
@@ -7,11 +7,11 @@
             <div class="col-xs-1">Day</div>
             <div class="col-xs-2">Ends</div>
             <div class="col-xs-2">Value</div>
-            <i class="fa fa-plus hvr-pop" ng-if="!transCtrl.addTVMode" ng-click="transCtrl.addTV()"></i>
+            <i class="fa fa-plus hvr-pop" ng-if="!tvListCtrl.listState.addEdit" ng-click="transCtrl.addTV()"></i>
         </div>
-        <div transaction-value-editor ng-if="transCtrl.tvListMgr.addEdit" class="transactionValueEditor" tvListMgr="transCtrl.tvListMgr"
-        tv="tv" cancel="cancelNewTV"></div>
+        <!--<div transaction-value-editor ng-if="tvListCtrl.listState.addEdit" class="transactionValueEditor" tvListMgr="tvListCtrl.listState"
+        tv="tv" cancel="cancelNewTV"></div>-->
     </li>
     <!--TRANSACTION VALUES -->
-    <li transaction-value tvListMgr="transCtrl.tvListMgr" ng-repeat="tv in ::transCtrl.trans.TransactionValues" tv="tv"></li>
+    <li transaction-value liststate="tvListCtrl.listState" ng-repeat="tv in ::tvListCtrl.TransactionValues" tv="tv"></li>
 </ul>
