Working on transactionValueEditor

--- a/Views/Templates/TransactionValueList.html
+++ b/Views/Templates/TransactionValueList.html
@@ -13,5 +13,5 @@
         tv="tv" cancel="cancelNewTV"></div>-->
     </li>
     <!--TRANSACTION VALUES -->
-    <li transaction-value liststate="tvListCtrl.listState" ng-repeat="tv in ::tvListCtrl.TransactionValues" tv="tv"></li>
+    <li transaction-value liststate="tvListCtrl.listState" ng-repeat="tv in ::tvListCtrl.transactionValues" tv="tv"></li>
 </ul>
