--- a/Views/Templates/transactionList.html
+++ b/Views/Templates/transactionList.html
@@ -1,12 +1,22 @@
 <ul class="transactionlist list-group">
 	<li class="list-group-item transactionstitle sectionheader clearfix">
 		<div class="sectiontitle">
-			<span>Recurring transactions</span>
-			<i style="float:right;" class="fa fa-plus fa-2x hvr-pop" ng-show="!tListCtrl.listState.addMode"
-			ng-click="tListCtrl.expandAddForm()"></i>
+			<span>Payments and deductions</span>
 		</div>
-		<form transaction-editor ng-if="tListCtrl.listState.addMode" listmgr="tListCtrl.listState" </form>
 	</li>
 	<transaction ng-repeat="t in tListCtrl.transactions" ng-show="tListCtrl.isVisible($index)" class="transaction list-group-item clearfix"
 	tListState="tListCtrl.listState" index="$index" trans="t" deletefn="tListCtrl.delete"></transaction>
+	<div class="transaction list-group-item">
+		<div class="transactioncompact">
+			<div class="row">
+				<div class="col-sm-5">
+					<p style="font-style: italic;">Add a new payment or deduction</p>
+				</div>
+				<div class="col-sm-2">
+					<i ng-click="tListCtrl.toggleAddForm()" tooltip="Click to expand" tooltip-placement="left" ng-class="transEditCtrl.expanded ? 'glyphicon glyphicon-menu-up' : 'glyphicon glyphicon-menu-down'"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+	<transaction-editor class="transaction list-group-item clearfix" trans="tListCtrl.listState.transactionToEdit" ng-if="tListCtrl.listState.addMode" liststate="tListCtrl.listState"></transaction-editor>
 </ul>
