--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -6,7 +6,6 @@ html {
 
 body {
     height: 100%;
-    background-color: #dddddd;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
 }
@@ -14,10 +13,10 @@ body {
 /* NAV */
 .NavBar {
     /*background-color: #799198;*/ 
-    height: 6%;
+    height: 4%;
     width: 100%;
     border-bottom: 1px solid #ddd;
-    background-color: #555555;
+    background-color: #7c9ed9;
 }
 
 .NavBar .loginpanel {
@@ -29,11 +28,15 @@ body {
 }
 
 .NavBar .loginpanel a {
-  color:  tomato;
+  color:  #ffa500;
 }
 
 .btn .btn-primary {
-  color: tomato;
+  color: #ffa500;
+}
+
+.glyphicon:hover {
+  color: #ffa500;
 }
 
 .loginRegisterModal .loginRegisterModalTabs
@@ -241,6 +244,7 @@ input:focus {
 
 .headline .headlineimage {
   width: 30%;
+  font-size: xx-large;
 }
 
 .savings {
@@ -304,7 +308,7 @@ input:focus {
     margin-bottom: 0;
 }
 
-.transactionlist .transaction {
+.transactionlist .transaction .list-group-item{
     border-bottom: 1px solid #ddd;
     padding: 5px 15px;
 }
