--- a/Views/Templates/Transaction.html
+++ b/Views/Templates/Transaction.html
@@ -8,6 +8,12 @@
             <div class="col-sm-2">
                 <i ng-click="transCtrl.expand()" tooltip="Click to expand" tooltip-placement="left" ng-class="transCtrl.expanded ? 'glyphicon glyphicon-menu-up' : 'glyphicon glyphicon-menu-down'"></i>
             </div>
+            <div class="col-sm-5">
+                <div class="transactioncontrols" style="float: right;">
+                        <span class="glyphicon glyphicon-pencil" style="padding: 5px;" ng-show="!trans.editable" ng-click="transCtrl.editToggle()"></span>
+                        <span class="glyphicon glyphicon-remove" style="padding: 5px;" ng-show="!trans.editable" ng-click="transCtrl.delete()"></span>
+                </div>
+            </div>
         </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
@@ -18,13 +24,5 @@
         <span class="label">{{::transCtrl.trans.TypeDescription}}</span>
         <!--TRANSACTION VALUES-->
         <trans-values-list transaction-values="transCtrl.trans.TransactionValues"></trans-values-list>
-        <div class="transactioncontrolpanel">
-            <div class="buttons" style="float:right; padding:5px;">
-                <i class="fa fa-pencil-square-o fa-2x" ng-show="!trans.editable" ng-click="editToggle(trans)"></i>
-                <i class="fa fa-trash fa-2x" ng-show="!trans.editable" ng-click="transCtrl.delete()"></i>
-                <button class="btn btn-danger btn-xs" ng-show="trans.editable" ng-click="editToggle(trans)">Cancel</button>
-                <button class="btn btn-success btn-xs" ng-show="trans.editable" ng-click="putTransaction(rowtoedit)">Save</button>
-            </div>
-        </div>
     </div>
 </div>
