--- a/Views/Templates/transactionEditor.html
+++ b/Views/Templates/transactionEditor.html
@@ -1,39 +1,42 @@
-<div class="form-inline transactionEditor">
-    <h4>Add new transaction</h4>
-    <div class="form-group form-inline">
-        <label for="newitemName">Name</label>
-        <input class="input-xs-flat" type="text" ng-model="transEdit.Trans.Name" placeholder="name" />
-    </div>
-    <div class="form-group form-inline">
-        <label for="newitemDescription">Type</label>
-        <select class="input-xs-flat" type="text" ng-options="type.ID as type.Description for type in ::transEdit.types"
-        placeholder="type" ng-model="transEdit.Trans.TypeID" />
-    </div>
-    <div class="form-group form-inline">
-        <label for="newitemAmount">Amount</label>
-        <input class="input-xs-flat" type="number" step=10 ng-model="transEdit.Trans.TransactionValues[0].Value" placeholder="amount"
-        />
-    </div>
-    <div class="form-group form-inline">
-        <label for="newitemFreq">Occurs</label>
-        <select class="input-xs-flat" type="text" ng-options="freq.ID as freq.Description for freq in ::transEdit.freqs"
-        placeholder="frequency" ng-model="transEdit.Trans.TransactionValues[0].FrequencyID" />
-    </div>
-    <div class="form-group form-inline">
-        <label for="newitemDay">On Day</label>
-        <input class="input-xs-flat" type="number" step=1 max="30" ng-model="transEdit.Trans.TransactionValues[0].Day"
-        placeholder="day" />
-    </div>
-    <div class="form-group form-inline">
-        <label for="newitemStart">Start Date</label>
-        <input class="input-xs-flat" type="date" ng-model="transEdit.Trans.TransactionValues[0].Start_date" />
-    </div>
-    <div class="form-group form-inline">
-        <label for="newitemStart">End Date</label>
-        <input class="input-xs-flat" type="date" ng-model="transEdit.Trans.TransactionValues[0].End_date" />
-    </div>
-    <div class="newTransactionControls" style="float:right; padding:5px;">
-        <i class="fa fa-check-circle" ng-click="transEdit.submit()"></i>
-        <i class="fa fa-times" ng-click="transEdit.cancel()"></i>
+<div>
+    <div class="form-inline transactionEditor">
+        <h4>Add new transaction</h4>
+        <div class="form-group form-inline">
+            <label for="newitemName">Name</label>
+            <input class="input-xs-flat" type="text" ng-model="transEditCtrl.trans.Name" placeholder="name" />
+        </div>
+        <div class="form-group form-inline">
+            <label for="newitemDescription">Type</label>
+            <select class="input-xs-flat" type="text" ng-options="type.ID as type.Description for type in ::transEditCtrl.types"
+            placeholder="type" ng-model="transEditCtrl.trans.TypeID" />
+        </div>
+        <div class="form-group form-inline">
+            <label for="newitemAmount">Amount</label>
+            <input class="input-xs-flat" type="number" step=10 ng-model="transEditCtrl.trans.TransactionValues[0].Value"
+            placeholder="amount" />
+        </div>
+        <div class="form-group form-inline">
+            <label for="newitemFreq">Occurs</label>
+            <select class="input-xs-flat" type="text" ng-options="freq.ID as freq.Description for freq in ::transEdit.frequencies"
+            placeholder="frequency" ng-model="transEditCtrl.trans.TransactionValues[0].FrequencyID" />
+        </div>
+        <div class="form-group form-inline">
+            <label for="newitemDay">On Day</label>
+            <input class="input-xs-flat" type="number" step=1 max="30" ng-model="transEditCtrl.trans.TransactionValues[0].Day"
+            placeholder="day" />
+        </div>
+        <div class="form-group form-inline">
+            <label for="newitemStart">Start Date</label>
+            <input class="input-xs-flat" type="date" ng-model="transEditCtrl.trans.TransactionValues[0].Start_date"
+            />
+        </div>
+        <div class="form-group form-inline">
+            <label for="newitemStart">End Date</label>
+            <input class="input-xs-flat" type="date" ng-model="transEditCtrl.trans.TransactionValues[0].End_date" />
+        </div>
+        <div class="newTransactionControls" style="float:right; padding:5px;">
+            <i class="glyphicon glyphicon-ok" ng-click="transEditCtrl.submit()"></i>
+            <i class="glyphicon glyphicon-remove" ng-click="transEditCtrl.cancel()"></i>
+        </div>
     </div>
 </div>
