--- a/Views/Templates/TransactionValueList.html
+++ b/Views/Templates/TransactionValueList.html
@@ -9,9 +9,8 @@
             <div class="col-xs-2">Value</div>
             <i class="fa fa-plus hvr-pop" ng-if="!tvListCtrl.listState.addEdit" ng-click="transCtrl.addTV()"></i>
         </div>
-        <!--<div transaction-value-editor ng-if="tvListCtrl.listState.addEdit" class="transactionValueEditor" tvListMgr="tvListCtrl.listState"
-        tv="tv" cancel="cancelNewTV"></div>-->
     </li>
     <!--TRANSACTION VALUES -->
     <li transaction-value liststate="tvListCtrl.listState" ng-repeat="tv in ::tvListCtrl.transactionValues" tv="tv"></li>
+    <li transaction-value-editor ng-if="tvListCtrl.listState.addEdit" class="transactionValueEditor" list-state="tvListCtrl.listState"
 </ul>
