incremental - transactionvalue mods not working server side...

--- a/Views/Templates/transactionValueEditor.html
+++ b/Views/Templates/transactionValueEditor.html
@@ -1,7 +1,7 @@
 <div class="form-inline">
     <div>
         <label for="startdate">Start Date</label>
-        <input class="input-xs-flat" type="date" data-ng-model="tvEditCtrl.tv.Start_date | date: 'shortDate'">
+        <input class="input-xs-flat" type="date" data-ng-model="tvEditCtrl.tv.Start_date">
     </div>
     <div>
         <label for="startdate">Occurs</label>
