--- a/Views/Templates/transactionList.html
+++ b/Views/Templates/transactionList.html
@@ -18,5 +18,5 @@
 			</div>
 		</div>
 	</div>
-	<transaction-editor class="transaction list-group-item clearfix" trans="tListCtrl.listState.transactionToEdit" ng-if="tListCtrl.listState.addMode" liststate="tListCtrl.listState"></transaction-editor>
+	<transaction-editor class="transaction list-group-item clearfix" trans="tListCtrl.listState.transactionToEdit" ng-if="tListCtrl.listState.addMode" liststate="tListCtrl.listState" list="tListCtrl.transactions"></transaction-editor>
 </ul>
